tests/sqlcmd/baselines/errors/load_classes2.errbaseline
SQL error while compiling query: SQL Syntax error in "LOAD CLASSES" unexpected token: LOAD
